[package]
name = "betanet-htx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Betanet HTX transport protocol implementation"

[dependencies]
async-trait = "0.1"
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
quinn = { workspace = true, optional = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
snow = { workspace = true }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
# argon2 = "0.2"  # Temporarily disabled due to edition2024 conflicts
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
# rcgen = { version = "0.13", optional = true }
# Transport and multiplexing
futures = { workspace = true }
# TLS fingerprint integration (temporarily disabled)
# betanet-utls = { path = "../betanet-utls", optional = true }
rand_distr = { version = "0.4", optional = true }
# Flow control and stream management
dashmap = { workspace = true }
parking_lot = { workspace = true }
webpki-roots = { workspace = true }
base64 = "0.21"
urlencoding = "2.1"
hex = "0.4"
# rcgen = "0.13"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
tempfile = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3"
rand_distr = "0.4"

[features]
default = ["tcp", "noise-xk"]
tcp = []
quic = ["dep:quinn", "dep:trust-dns-resolver"]
noise-xk = []
hybrid-kem-stub = []
tls-fingerprint = []
# Temporarily disable problematic features
# utls-integration = ["dep:betanet-utls", "dep:rand_distr", "tls-fingerprint"]
