[package]
name = "betanet-linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Betanet spec-compliance linter CLI"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
regex = "1.10"
async-trait = "0.1"

# For SBOM generation
toml = "0.8"
walkdir = "2.5"
cargo_metadata = "0.18"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["sbom", "checks-all"]
sbom = []
checks-all = []

[[bin]]
name = "betanet-linter"
path = "src/main.rs"
