[package]
name = "betanet-utls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Chrome-Stable (N-2) uTLS template generator"

[dependencies]
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# TLS fingerprinting
md5 = "0.7"
hex = "0.4"

# CLI
clap = { workspace = true }

# Async runtime for refresh
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client for Chrome version fetching (disabled for compatibility)
# reqwest = { version = "0.11", features = ["json"], optional = true }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "betanet-utls"
path = "src/bin/betanet-utls.rs"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["ja3", "ja4", "clienthello"]
ja3 = []
ja4 = []
clienthello = []
