[package]
name = "betanet-lint"
version = "0.1.0"
edition = "2021"
authors = ["AIVillage Team"]
description = "Lints Betanet binaries for MUST/SHALL compliance and generates SBOMs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
[workspace]
