[package]
name = "agent-fabric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified agent messaging API for RPC, bundles, and MLS cohorts"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Internal dependencies
betanet-htx = { path = "../betanet-htx" }
betanet-dtn = { path = "../betanet-dtn" }

# MLS group messaging
openmls = { version = "0.5", optional = true, features = ["test-utils"] }
openmls_traits = { version = "0.2", optional = true }
openmls_rust_crypto = { version = "0.2", optional = true }
openmls_basic_credential = { version = "0.2", optional = true }

# Serialization for RPC
protobuf = "3.0"
prost = "0.12"

# Additional utilities
uuid = { workspace = true, features = ["v4"] }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[features]
default = ["rpc", "dtn"]
rpc = []
dtn = []
mls = ["openmls", "openmls_traits", "openmls_rust_crypto", "openmls_basic_credential"]
