[package]
name = "betanet-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "C FFI bindings for Betanet core components"

[lib]
name = "betanet_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

# Minimal dependencies for Day 8-9 deliverable
[dependencies]
betanet-htx = { path = "../betanet-htx" }
betanet-mixnode = { path = "../betanet-mixnode" }
betanet-utls = { path = "../betanet-utls" }
betanet-linter = { path = "../betanet-linter" }

libc = "0.2"
futures = "0.3"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = []
static = []

[build-dependencies]
cbindgen = "0.26"
