[package]
name = "bitchat-cla"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["AIVillage Team"]
license = "MIT"
repository = "https://github.com/aivillage/aivillage"
description = "BitChat BLE Convergence Layer Adapter for DTN"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# Data structures
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }
tempfile = "3.0"

[features]
default = []
mock-ble = [] # For testing without real BLE hardware
