[package]
name = "federated"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }

# Networking and storage
dashmap = { workspace = true }
parking_lot = { workspace = true }
sled = { workspace = true }

# Local workspace crates
agent-fabric = { path = "../agent-fabric" }
twin-vault = { path = "../twin-vault" }
bitchat-cla = { path = "../bitchat-cla" }
betanet-dtn = { path = "../betanet-dtn" }

# FL-specific dependencies
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"
num-traits = "0.2"
ordered-float = { workspace = true }
rand_distr = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = ["secure-aggregation", "differential-privacy"]
secure-aggregation = []
differential-privacy = []
compression = []
mobile-optimized = []
