[package]
name = "navigator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Semiring-based multi-criteria path selection for AIVillage routing"

[dependencies]
# DTN integration
betanet-dtn = { path = "../betanet-dtn" }
# bitchat-cla = { path = "../bitchat-cla" }  # Commented out due to placeholder imports
# betanet-cla = { path = "../betanet-cla" }  # Commented out due to placeholder imports

# Async runtime
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
futures = { workspace = true }
async-trait = "0.1"

# Data structures
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Math and ordering
ordered-float = { version = "4.5", features = ["serde"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[features]
default = []
