[package]
name = "bitchat-cla"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "BitChat BLE Convergence Layer Adapter for DTN"

[dependencies]
# DTN integration
betanet-dtn = { path = "../betanet-dtn" }

# Async runtime
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
futures = { workspace = true }
async-trait = "0.1"

# Data structures
bytes = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Bluetooth and BLE (platform-specific)
# Note: These would be conditionally compiled based on platform
# For now, we'll use mocks for cross-platform compatibility

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[features]
default = []
mock-ble = [] # For testing without real BLE hardware
